Fixing menu overlapping with other elements

--- a/css/about.css
+++ b/css/about.css
@@ -327,6 +327,8 @@ li.navItem {
 .about {
   width: 100%;
   margin-bottom: 2rem;
+  position: relative;
+  z-index: -1;
 }
 
 .waterMark.stepCount {
